# phoxels

./: .gitignore  Cargo.toml  credit.txt  results.txt  todo  uuids.txt
assets/: pbr.wgsl
assets/shaders/: voxel.wgsl
phoxels/: Cargo.toml
phoxels/benches/: mesh_gen.rs
phoxels/src/: block.rs  diagnostics.rs  lib.rs  simple_shader.rs  utils.rs  voxel.wgsl
phoxels/src/chunk/: manager.rs  mesh_gen.rs  mod.rs  utils.rs
src/: diganostics.rs  full_shader.rs  lib.rs  main.rs  map.rs  player.rs  shader.rs  simple_shader.rs
