[package]
name = "phoxels_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1"}
noise = "*"
indexmap = "*"
bevy_mod_debugdump = "*"
bitflags = "*"
bytemuck = "*"
phoxels = { path = "./phoxels", features = ["diagnostics"]}


[features]
default = []
hot = ["bevy/file_watcher"]
standerd_position = ["phoxels/standerd_position"]

[workspace]
members = ["./phoxels"]

[profile.dev.package."*"]
opt-level = 3